# MathCyb2020

./: .gitignore  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  Blockchain.cpp  Blockchain.h  Blockchain_and_Smart_Contracts.txt  CMakeLists.txt  block.cpp  block.h  block.py  blockchain.cpp  blockchain.h  blockchain.py  main.cpp  main.py  readme.txt  sha256.cpp  transaction.py
hash/tests/: tests.cpp
lib/: CMakeLists.txt  block.h  blockchain.h  sha256.h
lib/blockchain_tools/: CMakeLists.txt  block.h  blockchain.h
lib/blockchain_tools/src/: block.cpp  blockchain.cpp
lib/src/: block.cpp  blockchain.cpp
